# Citrus

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: android.yml  generate-wrapper.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  android_jni.cpp  audio_android.cpp  audio_android.h  emu_window_android.cpp  emu_window_android.h  input_android.cpp  input_android.h
android/app/src/main/java/com/citra/android/: CitraApplication.kt  EmulatorActivity.kt  MainActivity.kt
android/app/src/main/java/com/citra/android/jni/: NativeLibrary.kt
android/app/src/main/java/com/citra/android/model/: GameEntry.kt
android/app/src/main/java/com/citra/android/ui/: EmulatorScreen.kt  GameLibraryScreen.kt  SettingsScreen.kt  VirtualControlsOverlay.kt
android/app/src/main/java/com/citra/android/ui/theme/: Theme.kt
android/app/src/main/java/com/citra/android/utils/: GameScanner.kt  PreferenceManager.kt
android/app/src/main/java/com/citra/android/viewmodel/: EmulatorViewModel.kt
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
